; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_merge.c_merge_heads.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_merge.c_merge_heads.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_ENOTFOUND = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32**, i32**, i32*, i32*, i32**, i64)* @merge_heads to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @merge_heads(i32** %0, i32** %1, i32* %2, i32* %3, i32** %4, i64 %5) #0 {
  %7 = alloca i32**, align 8
  %8 = alloca i32**, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32**, align 8
  %12 = alloca i64, align 8
  %13 = alloca i32*, align 8
  %14 = alloca i32*, align 8
  %15 = alloca i32, align 4
  store i32** %0, i32*** %7, align 8
  store i32** %1, i32*** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32** %4, i32*** %11, align 8
  store i64 %5, i64* %12, align 8
  store i32* null, i32** %13, align 8
  store i32* null, i32** %14, align 8
  store i32 0, i32* %15, align 4
  %16 = load i32**, i32*** %7, align 8
  store i32* null, i32** %16, align 8
  %17 = load i32**, i32*** %8, align 8
  store i32* null, i32** %17, align 8
  %18 = load i32*, i32** %9, align 8
  %19 = load i32*, i32** %10, align 8
  %20 = call i32 @git_annotated_commit_from_ref(i32** %14, i32* %18, i32* %19)
  store i32 %20, i32* %15, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %23

22:                                               ; preds = %6
  br label %42

23:                                               ; preds = %6
  %24 = load i32*, i32** %9, align 8
  %25 = load i32*, i32** %14, align 8
  %26 = load i32**, i32*** %11, align 8
  %27 = load i64, i64* %12, align 8
  %28 = call i32 @merge_ancestor_head(i32** %13, i32* %24, i32* %25, i32** %26, i64 %27)
  store i32 %28, i32* %15, align 4
  %29 = icmp slt i32 %28, 0
  br i1 %29, label %30, label %37

30:                                               ; preds = %23
  %31 = load i32, i32* %15, align 4
  %32 = load i32, i32* @GIT_ENOTFOUND, align 4
  %33 = icmp ne i32 %31, %32
  br i1 %33, label %34, label %35

34:                                               ; preds = %30
  br label %42

35:                                               ; preds = %30
  %36 = call i32 (...) @git_error_clear()
  store i32 0, i32* %15, align 4
  br label %37

37:                                               ; preds = %35, %23
  %38 = load i32*, i32** %13, align 8
  %39 = load i32**, i32*** %7, align 8
  store i32* %38, i32** %39, align 8
  %40 = load i32*, i32** %14, align 8
  %41 = load i32**, i32*** %8, align 8
  store i32* %40, i32** %41, align 8
  br label %42

42:                                               ; preds = %37, %34, %22
  %43 = load i32, i32* %15, align 4
  %44 = icmp slt i32 %43, 0
  br i1 %44, label %45, label %50

45:                                               ; preds = %42
  %46 = load i32*, i32** %13, align 8
  %47 = call i32 @git_annotated_commit_free(i32* %46)
  %48 = load i32*, i32** %14, align 8
  %49 = call i32 @git_annotated_commit_free(i32* %48)
  br label %50

50:                                               ; preds = %45, %42
  %51 = load i32, i32* %15, align 4
  ret i32 %51
}

declare dso_local i32 @git_annotated_commit_from_ref(i32**, i32*, i32*) #1

declare dso_local i32 @merge_ancestor_head(i32**, i32*, i32*, i32**, i64) #1

declare dso_local i32 @git_error_clear(...) #1

declare dso_local i32 @git_annotated_commit_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
